<resources>
    <string name="app_name">新世纪发货</string>
    <string name="image">image</string>
    <string name="login">登录</string>
    <string name="currVersion">当前进入的版本是</string>
    <string name="documents">货单</string>
    <string name="mine">查询</string>
    <string name="height">高度(cm)</string>
    <string name="with">宽度(cm)</string>
    <string name="length">长度(cm)</string>
    <string name="documentnum">订单号</string>
    <string name="number">数量</string>
    <string name="vol">体积</string>
    <string name="qty">件数(件)</string>
    <string name="startMade">开始制作</string>
    <string name="finshMade">已完成</string>
    <string name="accept_time">接收时间</string>
    <string name="finish_time">结束时间</string>
    <string name="all_vol">体积(m³)</string>
    <string name="CreatorName">创建订单人：</string>
    <string name="CreatorTime">创建时间：</string>
    <string name="state">状态：</string>
    <string name="jisuan">计算</string>
    <string name="all">合计</string>
    <string name="my">我</string>
    <string name="logout">退出登录</string>
    <string name="map">地图</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="query">查询</string>
    <string name="shipment">发货</string>
    <string name="selectAddress">选择城市</string>
    <string name="detailAdress">详细地址</string>
    <string name="sendCompany">寄件单位</string>
    <string name="sendPeople">发货人</string>
    <string name="phone">联系电话</string>
    <string name="time">预约日期</string>
    <string name="goodsVol">货物体积(方)</string>
    <string name="more_big">超大</string>
    <string name="more_weight">超重</string>
    <string name="weiBanChe">尾板车</string>
    <string name="addRemark">添加备注</string>
    <string name="shipOk">确认发货</string>
    <string name="documentNum">订单号</string>
    <string name="goodsStatus">货物状态</string>
    <string name="Time">时间</string>
    <string name="lookPic">签收图</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="nextPic">下一张</string>
    <string name="icon">头像</string>
    <string name="userName">用户名</string>
    <string name="mobileNum">手机号</string>
    <string name="version">版本</string>
    <string name="address">地址</string>
    <string name="RequestId">订单号</string>
    <string name="Appointment">预约时间</string>
    <string name="CargoVoum">体积</string>
    <string name="Stat">状态</string>
    <string name="TruckNumber">车牌</string>
    <string name="new_document">新增运单</string>
    <string name="document_num">运单号码</string>
    <string name="get">生成</string>
    <string name="scanner">扫描</string>
    <string name="firstAddress">始发地</string>
    <string name="endAddress">目的地</string>
    <string name="recivicePeople">收件员</string>
    <string name="shipPeople">派件员</string>
    <string name="sendProple">发件人</string>
    <string name="shipperName">寄件单位</string>
    <string name="search">查找</string>
    <string name="send">寄件人</string>
    <string name="SmsNotf">签收短信通知</string>
    <string name="selectCity">选择城市</string>
    <string name="AddressDetial">详细地址</string>
    <string name="Addresscode">区号</string>
    <string name="sendCallNum">寄件电话</string>
    <string name="otherPhone">分机</string>
    <string name="reciviceComp">收件单位</string>
    <string name="getPeople">收件人</string>
    <string name="reciviceNum">收件电话</string>
    <string name="goods">产品与服务(运输方式)</string>
    <string name="selectWay">运输方式</string>
    <string name="goodsDetail">托寄物详细资料</string>
    <string name="goodsName">品名</string>
    <string name="weight">重量</string>
    <string name="price">声明价值</string>
    <string name="freight">运费项目</string>
    <string name="upDoor">送货上门</string>
    <string name="upfloor">送货上楼</string>
    <string name="witerSend">等通知发货</string>
    <string name="allPrice">费用合计:</string>
    <string name="saveReturn">保存后返回</string>
    <string name="save">保存</string>
    <string name="AddressDetail">详细地址</string>
    <string name="location">定位</string>
    <string name="phonenum">手机号</string>
    <string name="linkman">联系人</string>

    <string name="back">返回</string>
    <string name="ok">确定</string>
    <string name="oldPsw">请输入原密码</string>
    <string name="NewPsw1">请输入新密码</string>
    <string name="NewPsw2">请确认密码</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
    <string name="pay__pre_by_wxap">生成APP微信支付参数</string>

    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pay_by_wxap">调起微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="app_tip">提示</string>
    <string name="getting_prepayid">正在生成预支付订单</string>
</resources>
