<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="blocksDescendants">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        card_view:cardCornerRadius="10dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_document_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/documentnum"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_frame_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/number"
                android:textColor="#000"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_document_CreatorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/CreatorName"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_document_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/state"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_document_creatTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/state"
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:background="@drawable/selector_btn"
        android:clickable="false"
        android:text="查询" />
</RelativeLayout>
